overlays/prod/fe/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fe-deployment
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: prod-fe
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: prod-fe
    spec:
      containers:
        - image: scgskku/ice-gs-thesis-fe-prod
          imagePullPolicy: Always
          name: fe
          ports:
            - containerPort: 3000
