overlays/prod/fe/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fe-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-clusterissuer"
spec:
  tls:
    - hosts:
        - grad.icc.skku.ac.kr
      secretName: ice-grad-thesis-prod-tls
  rules:
    - host: grad.icc.skku.ac.kr
      http:
        paths:
          - backend:
              service:
                name: fe-service
                port:
                  number: 80
            path: /
            pathType: Prefix
